--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   
   <div class="first">
-  <img class="one" src="C:\Users\Anurag Reddy\Desktop\webl\images\logo.svg">
+  <img class="one" src="images\logo.svg">
   <div class="two">
   <h1 class="h">A history of everything you copy</h1>
   <p class="swarag">Clipboard allows you to track and organize you copy. Instantly access your clipboard on all your devices</p>
@@ -26,7 +26,7 @@
 </div>
 <div class="sunny">
   <div class="img1">
-  <img class="cmon" src="C:\Users\Anurag Reddy\Desktop\webl\images\image-computer.png">
+  <img class="cmon" src="images\image-computer.png">
 </div>
   <div class="text">
     <div>
@@ -50,7 +50,7 @@
   <p class="swarag">weather you're on the go, or at your computer, you can acess all your Clipboard snippts in a few simple clicks.</p>
 </div>
   <div class="img2">
-  <img class="cmon add" src="C:\Users\Anurag Reddy\Desktop\webl\images\image-devices.png">
+  <img class="cmon add" src="images\image-devices.png">
 </div>
 </div>
 <div class="super">
@@ -59,27 +59,27 @@
 </div>
 <div class="create">
   <div class="c1">
-    <img class="svg" src="C:\Users\Anurag Reddy\Desktop\webl\images\icon-blacklist.svg">
+    <img class="svg" src="images\icon-blacklist.svg">
     <h2 class="h h2">Create blacklists</h2>
     <p class="swarag">ensure sensitive information never makes its way to your clipboard by excluding certain sources.</p>
   </div>
   <div class="c2">
-    <img class="svg" src="C:\Users\Anurag Reddy\Desktop\webl\images\icon-text.svg">
+    <img class="svg" src="images\icon-text.svg">
     <h2 class="h h2">Plain text snippets</h2>
     <p class="swarag">Remove unwanted formatting from copied text for a consistent look.</p>
   </div>
   <div class="c3">
-    <img class="svg" src="C:\Users\Anurag Reddy\Desktop\webl\images\icon-preview.svg">
+    <img class="svg" src="images\icon-preview.svg">
     <h2 class="h h2">Sneak Preview</h2>
     <p class="swarag">Quick preview off all snippets on your Clipboard for easy access.</p>
   </div>
 </div>
 <div class="ima">
-  <img class="im" src="C:\Users\Anurag Reddy\Desktop\webl\images\logo-google.png">
-  <img  class="im" src="C:\Users\Anurag Reddy\Desktop\webl\images\logo-ibm.png">
-  <img  class="im" src="C:\Users\Anurag Reddy\Desktop\webl\images\logo-microsoft.png">
-  <img class="im" src="C:\Users\Anurag Reddy\Desktop\webl\images\logo-hp.png">
-  <img class="im" src="C:\Users\Anurag Reddy\Desktop\webl\images\logo-vector-graphics.png">
+  <img class="im" src="images\logo-google.png">
+  <img  class="im" src="images\logo-ibm.png">
+  <img  class="im" src="images\logo-microsoft.png">
+  <img class="im" src="images\logo-hp.png">
+  <img class="im" src="images\logo-vector-graphics.png">
 </div>
 
 <div class="first tall">
@@ -93,7 +93,7 @@
   </div>
 </div>
   <footer>
-    <img class="last1" src="C:\Users\Anurag Reddy\Desktop\webl\images\logo.svg">
+    <img class="last1" src="images\logo.svg">
     <div class="second1">
     <p class="swarag re">FAQs</p>
     <p class="swarag re">Privacy Policy</p>
@@ -102,9 +102,9 @@
     <p class="swarag re">Press Kit</p>
     </div>
     <div class="third1">
-      <img class="lastimg"  src="C:\Users\Anurag Reddy\Desktop\webl\images\icon-facebook.svg">
-      <img class="lastimg" src="C:\Users\Anurag Reddy\Desktop\webl\images\icon-twitter.svg">
-      <img class="lastimg" src="C:\Users\Anurag Reddy\Desktop\webl\images\icon-instagram.svg">
+      <img class="lastimg"  src="images\icon-facebook.svg">
+      <img class="lastimg" src="images\icon-twitter.svg">
+      <img class="lastimg" src="images\icon-instagram.svg">
     </div>
   </footer>
 </body>
